<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/label"
        android:background="@android:color/white"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight=".33"
            android:background="@drawable/forget_btn"
            android:padding="5dp"
            android:text="@string/sign_cancel"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight=".33"
            android:background="@drawable/forget_btn"
            android:padding="5dp"
            android:text="@string/sign_clear"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight=".33"
            android:background="@drawable/forget_btn"
            android:padding="5dp"
            android:text="@string/sign_save"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>	