<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/lin_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Add a Branch"
            android:textColor="@color/register_cmpny"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/margin_top2"
            android:layout_marginBottom="@dimen/margin_bottom"/>

        <LinearLayout
            android:id="@+id/lin7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom1"
            android:layout_marginTop="@dimen/margin_top3"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_branchmngr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left1"
                android:layout_marginRight="@dimen/margin_right2"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/branchmngr"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:maxLength="30"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edt_branchemail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left1"
                android:layout_marginRight="@dimen/margin_right2"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/branchemail"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:maxLength="30"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom1"
            android:layout_marginTop="@dimen/margin_top3"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_branchid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left1"
                android:layout_marginRight="@dimen/margin_right2"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/branchid"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:maxLength="10"/>

            <EditText
                android:id="@+id/edt_branchnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left1"
                android:layout_marginRight="@dimen/margin_right2"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/phone1"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:maxLength="10"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom1"
            android:layout_marginTop="@dimen/margin_top3"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left1"
                android:layout_marginRight="@dimen/margin_right2"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/address"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:maxLength="100"/>

            <EditText
                android:id="@+id/edt_branchpincode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left1"
                android:layout_marginRight="@dimen/margin_right2"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/pincode"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:inputType="number"
                android:maxLength="6"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>