<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_contact"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginLeft="@dimen/margin_left1"
        android:layout_marginRight="@dimen/margin_right2"
        android:layout_marginTop="@dimen/margin_top1"
        android:background="@drawable/black_border"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password_new"
            android:padding="10dp"
            android:maxLength="10"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/view_bck" />

        <EditText
            android:id="@+id/edt_confpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password_confirm"
            android:maxLength="10"
            android:padding="10dp"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/view_bck" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginTop="@dimen/margin_top1"
        android:background="@drawable/myprofile_update"
        android:paddingBottom="@dimen/paddingBottom"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight"
        android:paddingTop="@dimen/paddingTop"
        android:text="@string/myprofile_update"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>