<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/toolbar_signin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/lin_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/username_hint"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin1_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_edt"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginTop="@dimen/margin_top1"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/lin_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin1_edt"
            android:layout_marginTop="@dimen/margin_top1"
            android:gravity="center">

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/forget_pass"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/forget_pass" />

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_left2"
                android:layout_toRightOf="@+id/forget_password"
                android:background="@color/signin_btn"
                android:paddingLeft="@dimen/paddingLeft2"
                android:paddingRight="@dimen/paddingRight2"
                android:text="@string/btn_sign"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lin_sign"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/sign_in_logo" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
