<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/audit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom2"
            android:layout_marginLeft="@dimen/margin_left4"
            android:layout_marginRight="@dimen/margin_right4"
            android:layout_marginTop="@dimen/margin_top4"
            android:background="@color/audit_title_bck"
            android:paddingBottom="@dimen/padding"
            android:paddingLeft="@dimen/paddingLeft1"
            android:paddingRight="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/audit_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/audit_title" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/audit_date"
            android:layout_marginBottom="@dimen/margin_bottom2"
            android:layout_marginLeft="@dimen/margin_left1"
            android:layout_marginRight="@dimen/margin_right2"
            android:layout_marginTop="@dimen/margin_top3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize" />

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:layout_marginLeft="@dimen/margin_left1"
            android:layout_marginRight="@dimen/margin_right2"
            android:layout_marginTop="@dimen/margin_top5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdt_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Yes"
                android:textSize="@dimen/textsize"/>

            <RadioButton
                android:id="@+id/rdt_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No"
                android:textSize="@dimen/textsize" />

        </RadioGroup>

        <EditText
            android:id="@+id/edt_remark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height1"
            android:layout_below="@+id/edt_comment"
            android:layout_marginLeft="@dimen/margin_left1"
            android:layout_marginRight="@dimen/margin_right2"
            android:layout_marginTop="@dimen/margin_top2"
            android:background="@drawable/light_border"
            android:gravity="top"
            android:hint="@string/audit_remark"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="@dimen/padding" />

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height1"
            android:layout_below="@+id/rg1"
            android:layout_marginLeft="@dimen/margin_left1"
            android:layout_marginRight="@dimen/margin_right2"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/light_border"
            android:gravity="top"
            android:hint="@string/audit_comment"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="@dimen/padding" />

        <Button android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audit_submit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@drawable/audit_btn"
            android:textColor="@color/audit_title"
            android:paddingTop="@dimen/paddingTop"
            android:paddingBottom="@dimen/paddingBottom"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingRight="@dimen/paddingRight"
            android:layout_marginTop="@dimen/margin_top1"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_below="@+id/edt_remark"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>
